cmake_minimum_required(VERSION 3.17)
project(cpp_pp)

set(CMAKE_CXX_STANDARD 14)


add_executable(bubblesort bubblesort.cpp)
add_executable(insertionsort insertionsort.cpp)
add_executable(selectionsort selectionsort.cpp)
add_executable(quicksort quicksort.cpp)
add_executable(mergesort mergesort.cpp)
